fixed the spacing of the buttons and added a heading to the top with the state code

--- a/assets/style.css
+++ b/assets/style.css
@@ -42,11 +42,40 @@ h6 {
   width: 120px;
   height: 120px;
   animation: spin 2s linear infinite;
+  align-items: center;
+}
+
+.card-body {
+  margin: 1%;
 }
 
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
-/* dropdown list of states */
-/* Dropdown Button */
+
+.parks {
+  padding: 3% 3%;
+}
+@media all and (max-width: 980px) {
+  .container {
+      display: flex;
+      align-items: flex-start;
+  }
+  .row {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+  }
+}
+@media all and (max-width: 768px) {
+  .container {
+      display: flex;
+      align-items: flex-start;
+  }
+  .row {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+  }
+}
